# telefix-agent-eval

./: .env.example  .gitignore  README.md  pyproject.toml
.github/actions/evaluate/: action.yml
.github/workflows/: ci.yml
.streamlit/: config.toml
assets/: architecture.mmd  evaluation-flow.mmd
dashboard/: app.py  client.py
docs/: architecture.md  benchmarks.md  ci-gate.md  context-aware-policies.md  demo.md  evaluation-engine.md  github-action.md  langgraph-integration.md  runtime-context.md  sqlite-store.md  state-drift.md  trajectory-schema.md  trex.md
evals/: golden_cases.json
examples/github-actions/: evaluate.yml
examples/langgraph/: agent.py  otel.py  scenarios.py  tools.py
examples/telecom/bgp_route_flap/: expected_report.json  expected_trajectory.json  policy.yaml  spans.json
examples/telecom/high_latency/: expected_report.json  expected_trajectory.json  policy.yaml  spans.json
examples/telecom/tool_misfire/: expected_report.json  expected_trajectory.json  spans.json
schemas/: trajectory_schema.json
scripts/: run_demo.py
src/: __init__.py  agent.py  config.py  eval_worker.py  evaluation.py  event_stream.py  experiments.py  llm_router.py  main.py  rag.py  review_queue.py  schemas.py  state_store.py  tools.py
telefix/cli/: context.py  main.py  reporting.py
telefix/evaluator/: context.py  evaluate.py  metrics.py  models.py  policies.py  policy_engine.py  rules.py  state_drift.py
telefix/models/: trajectory.py
telefix/otel/: exporter.py
telefix/storage/: base.py  schema.sql  sqlite.py
telefix/trex/: reconstruct.py
telefix/trex/adapters/: otel.py
tests/: test_dashboard.py  test_eval_regression_gate.py  test_hallucination_eval.py  test_hybrid_rag.py  test_llm_router.py  test_state_and_events.py  test_structural_regression.py
tests/cli/: test_context_injection.py  test_evaluate_command.py
tests/evaluator/: test_context_policies.py  test_evaluate.py  test_state_drift.py
tests/integration/: test_langgraph_pipeline.py
tests/otel/: test_exporter.py
tests/storage/: test_sqlite_store.py
tests/trex/: test_reconstruction.py
