[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "telefix-agent-eval"
version = "0.1.0"
description = "A synthetic broadband troubleshooting agent and evaluation demo."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Telefix Demo" }]
dependencies = [
  "fastapi>=0.115,<1.0",
  "langgraph>=0.2,<1.0",
  "pydantic-settings>=2.6,<3.0",
  "qdrant-client>=1.12,<2.0",
  "redis>=5.2,<6.0",
  "tenacity>=9.0,<10.0",
  "uvicorn[standard]>=0.32,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.24,<1.0",
  "ruff>=0.8,<1.0",
]
dashboard = [
  "pandas>=2.2,<3.0",
  "requests>=2.32,<3.0",
  "streamlit>=1.41,<1.50",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
